<resources>
    <string name="app_name">My Module</string>
    <string name="transmit_sendButtonTxt">Send</string>
    <string name="transmit_pauseButtonTxt">Pause</string>
    <string name="transmit_chunkTxt">chunk:</string>
    <string name="transmit_chunk_sep">, </string>
    <string name="receive_buttonOkTxt">@android:string/ok</string>
    <string name="receive_failedTxt">Receive canceled</string>
    <string name="cancel">Cancel</string>

    <string name="settings_actionbar_title">Settings</string>
    <string name="preference_title_qr_density">QR Code Density</string>
    <string name="preference_description_qr_density">Set the relative capacity of each QR code used</string>
    <string name="preference_title_frame_time">Transmission Speed</string>
    <string name="preference_description_frame_time">Time used to display each frame</string>
    <string name="preference_title_error_correction">Error Correction</string>
    <string name="preference_description_error_correction">Amount of redundancy in each QR code</string>
    <string name="preference_title_frame_population">Frame Population</string>
    <string name="preference_description_frame_population">Number of QR codes per frame</string>

    <!-- Text for setting preferences -->
    <string name="preference_low">Low</string>
    <string name="preference_med">Medium</string>
    <string name="preference_high">High</string>

    <!-- Possible settings for QR density -->
    <string name="preference_density_low">12</string>
    <string name="preference_density_med">18</string>
    <string name="preference_density_high">25</string>

    <!-- Possible settings for frame display rate (milliseconds) -->
    <string name="preference_frame_time_super_low">100</string>
    <string name="preference_frame_time_low">200</string>
    <string name="preference_frame_time_med">500</string>
    <string name="preference_frame_time_high">1000</string>

    <!-- Possible settings for number QR codes per frame -->
    <string name="preference_frame_population_low">1</string>
    <string name="preference_frame_population_med">2</string>
    <string name="preference_frame_population_high">6</string>

    <!-- Settings: Toggle display of QR chunk labels -->
    <string name="preference_title_chunk_labels">Display QR code labels</string>

</resources>
