<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <PreferenceCategory
        android:title="Transmit">

        <ListPreference
            android:key="qr_density"
            android:title="@string/preference_title_qr_density"
            android:summary="@string/preference_description_qr_density"
            android:entries="@array/qr_density"
            android:entryValues="@array/qr_density_values"
            android:defaultValue="10"
            />

        <ListPreference
            android:key="frame_time"
            android:title="@string/preference_title_frame_time"
            android:summary="@string/preference_description_frame_time"
            android:entries="@array/frame_time"
            android:entryValues="@array/frame_time_values"
            android:defaultValue="1000"
            />

        <ListPreference
            android:key="error_correction"
            android:title="@string/preference_title_error_correction"
            android:summary="@string/preference_description_error_correction"
            android:entries="@array/error_correction"
            android:entryValues="@array/error_correction_values"
            android:defaultValue="L"
            />

        <ListPreference
            android:key="frame_population"
            android:title="@string/preference_title_frame_population"
            android:summary="@string/preference_description_frame_population"
            android:entries="@array/frame_population"
            android:entryValues="@array/frame_population_values"
            android:defaultValue="1"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Receive">
    </PreferenceCategory>
</PreferenceScreen>
